Code Quality: Consider Findbugs/PMD warnings reported by Sonar.